@@ -1,6 +1,7 @@
 *** nearest release ***
-  ! Correction convert dialog
-    * add external columns into tree view like size (px,k/MiB)
+  ! new options group box: "File List" for TreeWidget settings
+  ! SVG convertion patch
+  ! options group boxes: load settings after setup UI
 
 *** next release ***
   ! Sessions: save and restore files list in/from text file
