@@ -14,6 +14,7 @@
     - width of SVG images render in DetailsBrowser patch
     - drop event improved
     - myQTreeWidget renamed to TreeWidget, some code moved from ConvertDialog
+    - external columns into tree view like size (px,K/MiB) added
 
 * Tue Jul 31 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.4
     - Changelog file provided
